ui/VideoConverterInt.pas


// *****************************************************
// 音频处理部分
// 当播放器存在是必须调用下面的函数使其生效, 不可以直接修改
// 如果不在播放状态（应该不会），可以直接修改VCItem的参数
// ******************************************************

// 设置背景音乐
// index 必须等于1或者2
// 如果是录音文件，应该先设置完成后删除先前的录音文件:MediaInfoFree
// 如果info=NULL, 意味着删除背景音乐
procedure vcVideoPlayerSetMusic(player: Pointer; index: Int32; info: PMediaInfo); stdcall;

// 设置音量
procedure vcVideoPlayerSetVolume(player: Pointer; index: Int32; Volume: Int32); stdcall;

(* ****************************************************
  开始转换
  **************************************************** *)

procedure vcReadyForConvert(); stdcall;

// 开始转换
// 转换的进度在m_ConvertTime中定义
// 如果m_Parallel != 1 则多个文件将同时进行
// 转换未结束之前，不得修改任何参数
// 请参考消息VC_ITEM_STAT_CHANGED
// 进度定义在 m_Time / m_Duration
function vcStartConvert(item: PVCItem): HRESULT; stdcall;

// 取消转换，未转换完成的文件将会被删除
procedure vcAbortConvert(item: PVCItem); stdcall;

(* ****************************************************
  开始合并
  **************************************************** *)

type
    MergeInfo = record
        m_Name: Array [0 .. 255] of WideChar; // 生成的文件名称
        m_OutFile: TFilePath;                 // 输出文件全路径
        m_hwndMessage: HWND;                  // 用于接收状态改变的消息的窗口
        m_Time: Int64;                        // 当前已经完成的时长
        m_Duration: Int64;                    // 转换后的时长
    end;

    PMergeInfo = ^MergeInfo;

const
    // 合并完成
    // wParam:指向VCItem的指针
    // lParam:如果为非0表示失败
    VC_MERGE_COMPLETE = (VC_MESSAGE_BASE + 30);

function MergeInfo_Size(): Integer; stdcall;
function vcGetMergeInfo(): PMergeInfo; stdcall;

// 开始合并
function vcStartMerge(var item: PVCItem; Count: Integer): HRESULT; stdcall;

// 取消合并，未转换完成的文件将会被删除
procedure vcAbortMerge(); stdcall;

// 辅助函数
function MakeMediaInfoString(info: PMediaInfo; var buffer: array of WideChar): PWideChar; stdcall;
function GetMediaString(info: PMediaInfo): String;
procedure CopyProfileSettings(); stdcall;
function GetCpuCoreCount(): Integer; stdcall;
procedure DraweBackgroundSample(buffer: PBYTE); stdcall;
procedure DrawLogoSample(buffer: PBYTE); stdcall;
procedure DrawResizeSample(buffer: PBYTE; item: PVCItem); stdcall;

procedure CreateHSBControl(hwndParent, hwndMessage: HWND; uiMessage: UINT; Color: DWORD); stdcall;
procedure CreateHSBControlEx(hwndParent, hwndMessage: HWND; uiMessage: UINT; Color: DWORD; xPos, yPos: Integer); stdcall;

(* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  录音支持
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *)
const
    // 音量示例
    // wParam:未使用
    // lParam:音量：0～100
    VC_RECORDING_SAMPLE = (VC_MESSAGE_BASE + 40);

    // 已经录制的长度
    // wParam:1/1000000秒，秒的剩余部分
    // lParam:已经录制的长度(秒)
    VC_RECORDING_DURATION = (VC_MESSAGE_BASE + 41);

    // 开始录制
    // 如果StartTime!=0, 会在前面填充静音
function AudioRecorderCreate(hwndMessage: HWND): Pointer; stdcall;

// 获取媒体信息
// 如果要废弃录音，应用程序应该删除：MediaInfoFree
function AudioRecorderGetInfo(recorder: Pointer): PMediaInfo; stdcall;

// 暂停录制
procedure AudioRecorderPause(recorder: Pointer); stdcall;

// 继续录制
// 如果和视频同步录制，暂停会导致音频和视频不同步，应该重新Seek视频
procedure AudioRecorderResume(recorder: Pointer); stdcall;

// 销毁
procedure AudioRecorderDestroy(recorder: Pointer); stdcall;

// 辅助
// 喇叭静音
// bMute=0不静音，否则静音，在录制过程中应该静音，否则会干扰麦克风
function SpeakerMute(bMute: Int32): HRESULT; stdcall;

implementation

uses Defines;

function VCGlobal_Size; external DLL_NAME name 'VCGlobal_Size';
function CodecOptions_Size; external DLL_NAME name 'CodecOptions_Size';
function MediaInfo_Size; external DLL_NAME name 'MediaInfo_Size';
function VCItem_Size; external DLL_NAME name 'VCItem_Size';

function vcGetGlobal; external DLL_NAME name 'vcGetGlobal';
function vcGetCodecOptions; external DLL_NAME name 'vcGetCodecOptions';

function vcInitialize; external DLL_NAME name 'vcInitialize';
procedure vcUninitialize; external DLL_NAME name 'vcUninitialize';

function vcImportMediaInfo; external DLL_NAME name 'vcImportMediaInfo';
procedure vcImportAbort; external DLL_NAME name 'vcImportAbort';
function vcImportGetProgress; external DLL_NAME name 'vcImportGetProgress';

function vcCreateItem; external DLL_NAME name 'vcCreateItem';
procedure vcDeleteItem; external DLL_NAME name 'vcDeleteItem';

function vcCreateVideoPlayer; external DLL_NAME name 'vcCreateVideoPlayer';
function vcVideoPlayerGrab; external DLL_NAME name 'vcVideoPlayerGrab';
procedure vcVideoPlayerDestroy; external DLL_NAME name 'vcVideoPlayerDestroy';
procedure vcVideoPlayerResize; external DLL_NAME name 'vcVideoPlayerResize';
procedure vcVideoPlayerStartStop; external DLL_NAME name 'vcVideoPlayerStartStop';
procedure vcVideoPlayerResume; external DLL_NAME name 'vcVideoPlayerResume';
procedure vcVideoPlayerPause; external DLL_NAME name 'vcVideoPlayerPause';
procedure vcVideoPlayerSeekStart; external DLL_NAME name 'vcVideoPlayerSeekStart';
procedure vcVideoPlayerSeekStop; external DLL_NAME name 'vcVideoPlayerSeekStop';
procedure vcVideoPlayerSeekTo; external DLL_NAME name 'vcVideoPlayerSeekTo';
procedure vcVideoPlayerNextFrame; external DLL_NAME name 'vcVideoPlayerNextFrame';
procedure vcVideoPlayerPreTime; external DLL_NAME name 'vcVideoPlayerPreTime';
procedure vcVideoPlayerNextTime; external DLL_NAME name 'vcVideoPlayerNextTime';
function vcVideoPlayerCurrentTime; external DLL_NAME name 'vcVideoPlayerCurrentTime';
procedure vcVideoPlayerForceRedraw; external DLL_NAME name 'vcVideoPlayerForceRedraw';

procedure vcVideoPlayerSetMusic; external DLL_NAME name 'vcVideoPlayerSetMusic';
procedure vcVideoPlayerSetVolume; external DLL_NAME name 'vcVideoPlayerSetVolume';

procedure vcReadyForConvert; external DLL_NAME name 'vcReadyForConvert';
function vcStartConvert; external DLL_NAME name 'vcStartConvert';
procedure vcAbortConvert; external DLL_NAME name 'vcAbortConvert';

function MergeInfo_Size; external DLL_NAME name 'MergeInfo_Size';
function vcGetMergeInfo; external DLL_NAME name 'vcGetMergeInfo';
function vcStartMerge; external DLL_NAME name 'vcStartMerge';
procedure vcAbortMerge; external DLL_NAME name 'vcAbortMerge';

function MakeMediaInfoString; external DLL_NAME name 'MakeMediaInfoString';
procedure CopyProfileSettings; external DLL_NAME name 'CopyProfileSettings';
function GetCpuCoreCount; external DLL_NAME name 'GetCpuCoreCount';
procedure DraweBackgroundSample; external DLL_NAME name 'DraweBackgroundSample';
procedure DrawLogoSample; external DLL_NAME name 'DrawLogoSample';
procedure DrawResizeSample; external DLL_NAME name 'DrawResizeSample';

procedure CreateHSBControl; external DLL_NAME name 'CreateHSBControl';
procedure CreateHSBControlEx; external DLL_NAME name 'CreateHSBControlEx';

function AudioRecorderCreate; external DLL_NAME name 'AudioRecorderCreate';
function AudioRecorderGetInfo; external DLL_NAME name 'AudioRecorderGetInfo';
procedure AudioRecorderPause; external DLL_NAME name 'AudioRecorderPause';
procedure AudioRecorderResume; external DLL_NAME name 'AudioRecorderResume';
procedure AudioRecorderDestroy; external DLL_NAME name 'AudioRecorderDestroy';
function SpeakerMute; external DLL_NAME name 'SpeakerMute';

function GetMediaString(info: PMediaInfo): String;
var
    buffer: Array [0 .. 1024 - 1] of WideChar;
begin
    Result := MakeMediaInfoString(info, buffer);
end;

end.
